css/material-datetimepicker.css
md-dialog.dtp {
    font-size: 14px;
    line-height: 1.42857143;
    color: #333;
    background-color: #fff;
    max-height: none;
}


.dtp *:focus {
    outline: none !important;
}

.dtp table {
    border-spacing: 0;
    border-collapse: collapse;
    width: 100%;
}

.dtp .table > tbody > tr > td,
.dtp .table > tbody > tr > th,
.dtp .table > tfoot > tr > td,
.dtp .table > tfoot > tr > th,
.dtp .table > thead > tr > td,
.dtp .table > thead > tr > th {
    padding: 8px;
    line-height: 1.42857143;
    vertical-align: top;
    border-top: 1px solid #ddd;
}

.dtp, .dtp * {
    box-sizing: border-box !important;
}

.dtp > .dtp-content {
    max-width: 300px;
    max-height: 500px;
}

.dtp-header {
    background: #689F38;
    color: #fff;
    text-align: center;
    padding: 10px;
    font-size: medium;
    margin: auto;
}

.dtp > .dtp-content > .dtp-date-view > header.dtp-header {
    background: #689F38;
    color: #fff;
    text-align: center;
    padding: 3px;
}

.dtp div.dtp-date, .dtp div.dtp-time {
    background: #689F38;
    text-align: center;
    color: #fff;
    padding: 10px;
}

.dtp div.dtp-date > div {
    padding: 0;
    margin: 0;
}

.dtp div.dtp-actual-month {
    font-size: 1.5em;
}

.dtp div.dtp-actual-num {
    font-size: 3em;
    line-height: 0.9;
}

.dtp div.dtp-actual-maxtime {
    font-size: 3em;
    line-height: 0.9;
}

.dtp div.dtp-actual-year {
    font-size: 1.6em;
    color: #DCEDC8;
}

.dtp div.dtp-year-btn {
    font-size: 1.4em;
    line-height: 30px;
    cursor: pointer;
    color: #DCEDC8;
}

.dtp div.dtp-year-btn-prev {
    text-align: right;
}


.dtp div.dtp-year-btn-next {
    text-align: left;
}

.dtp div.dtp-picker {
    padding: 10px;
    text-align: center;
}

.dtp div.dtp-picker-month, .dtp div.dtp-actual-time {
    font-weight: 500;
    text-align: center;
}

.dtp .dtp-close {
    position: absolute;
    top: 0.25em;
    right: 5px;
    font-size: 16px;
}

.dtp .dtp-close > a {
    color: #fff;
    text-decoration: none;
}

.dtp .dtp-close > a > i {
    font-size: 1em;
}

.dtp table.dtp-picker-days {
    margin: 0;
    min-height: 220px;
}

.dtp md-virtual-repeat-container.months {
    height: 260px;
}

.dtp table.dtp-picker-days, .dtp table.dtp-picker-days tr, .dtp table.dtp-picker-days tr > td {
    border: none;
}

.dtp table.dtp-picker-days tr > td {
    font-size: 11px;
    text-align: center;
    padding: 0;
}

.dtp table.dtp-picker-days tr > td > span.dtp-select-day {
    color: #BDBDBD !important;
}
.dtp table.dtp-picker-days tr > td > .dtp-select-day {
    width: 36px;
    height: 36px;
    display: inline-block;
}
.dtp table.dtp-picker-days tr > td > .dtp-select-day, .dtp .dtp-picker-time > a {
    color: #212121;
    text-decoration: none;
    padding: 10px;
    border-radius: 50% !important;
}

.dtp table.dtp-picker-days tr > td > a.selected {
    background: #8BC34A;
    color: #fff;
}

.dtp table.dtp-picker-days tr > td > a:hover:not(.selected) {
    background: #dddddd;
}

.dtp table.dtp-picker-days tr > th {
    color: #757575;
    text-align: center;
    font-weight: 700;
    padding: 4px 3px;
}

.dtp .p10 > a {
    color: #689F38;
    text-decoration: none;
}

.dtp .p10 {
    width: 10%;
    display: inline-block;
}

.dtp .p20 {
    width: 20%;
    display: inline-block;
}

.dtp .p60 {
    width: 60%;
    display: inline-block;
}

.dtp .p80 {
    width: 80%;
    display: inline-block;
}

.dtp a.dtp-meridien-am, .dtp a.dtp-meridien-pm {
    position: relative;
    top: 10px;
    color: #212121;
    font-weight: 500;
    padding: 7px 5px;
    border-radius: 50% !important;
    text-decoration: none;
    background: #eee;
    font-size: 10px;
}

.dtp .dtp-actual-meridien a.selected {
    background: #689F38;
    color: #fff;
}

.dtp .dtp-picker-time > a {
    display: block;
    line-height: 23px;
    padding: 3px 3px 3px 3px;
}

.dtp .dtp-picker-time {
    position: absolute;
    width: 30px;
    height: 30px;
    font-size: 1.1em;
    border-radius: 50%;
    cursor: pointer;
    text-align: center !important;
}

.dtp .dtp-picker-time > a.dtp-select-hour.selected {
    background: #689F38;
    color: #fff;
}

.dtp .dtp-picker-time > a.dtp-select-hour.disabled, .dtp .dtp-picker-time > a.dtp-select-minute.disabled {
    color: #757575;
}

.dtp .dtp-picker-time > a.dtp-select-minute.selected {
    background: #8BC34A;
    color: #fff;
}

.dtp div.dtp-picker-clock {
    margin: 10px 20px 0 20px;
    padding: 10px;
    border-radius: 50% !important;
    background: #eee;
}

.dtp-clock-center {
    width: 15px;
    height: 15px;
    background: #757575;
    border-radius: 50%;
    position: absolute;
    z-index: 50;
}

.dtp .dtp-hand, .dtp .dtp-hour-hand {
    position: absolute;
    width: 4px;
    margin-left: -2px;
    background: #BDBDBD;
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
    -moz-transform-origin: bottom;
    -ms-transform-origin: bottom;
    -webkit-transform-origin: bottom;
    transform-origin: bottom;
    z-index: 1;
}

.dtp .dtp-minute-hand {
    width: 2px;
    margin-left: -1px;
}

.dtp .dtp-hand.on {
    background: #8BC34A;
}

.dtp .dtp-buttons {
    padding: 0 10px 10px 10px;
    text-align: right;
}

.dtp.hidden, .dtp .hidden {
    display: none;
}

.dtp .invisible {
    visibility: hidden;
}

.dtp .left {
    float: left;
}

.dtp .right {
    float: right;
}

.dtp .clearfix {
    clear: both;
}

.dtp .center {
    text-align: center;
}

